# zork

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  requirements.txt
data/: enemies.json  items.json  rooms.json
include/: Command.h  Constants.h  Enemy.h  Game.h  Item.h  Player.h  Room.h  SaveManager.h  Utils.h
kubernetes/: configmap.yaml  deployment.yaml  pvc.yaml
scripts/: build.sh  deploy-k8s.sh  docker-build.sh  docker-run.sh  run.sh
src/: Command.cpp  Enemy.cpp  Game.cpp  Item.cpp  Player.cpp  Room.cpp  SaveManager.cpp  Utils.cpp  main.cpp
